<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Help by Voice</string>
    <string name="tab_home">Home</string>
    <string name="tab_dialect">To Mandarin</string>
    <string name="tab_ask">Ask</string>
    <string name="tab_song">Song</string>
    <string name="tab_me">Me</string>
    <string name="txt_answer"> Answer(s)</string>
    <string name="btn_my_question">My Questions</string>
    <string name="btn_my_answers">My Answers</string>
    <string name="title_activity_to_dialect">Help by Voice</string>
    <string name="btn_answer">Answer</string>
    <string name="btn_mandarin_to_dialect">Mandarin\nto\n Dialect</string>
    <string name="btn_dialect_to_mandarin">Dialect\nto\nMandarin</string>
    <string name="btn_song_to_mandarin">Song\nto\nMandarin</string>
    <string name="infer_choose_place">Please choose a place</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_best">0 UP</string>
    <string name="btn_record_0">Press to speak</string>
    <string name="btn_record_1">Press to finish</string>
    <string name="btn_record_2">Record finished, do you want to submit?</string>

    <!--China Provinces-->
    <string name="pro_beijing">Beijing</string>
    <string name="pro_shanghai">Shanghai</string>
    <string name="pro_tianjin">Tianjin</string>
    <string name="pro_chongqing">Chongqing</string>
    <string name="pro_heilongjiang">Heilongjiang</string>
    <string name="pro_jilin">Jilin</string>
    <string name="pro_liaoning">Liaoning</string>
    <string name="pro_hebei">Heibei</string>
    <string name="pro_henan">Henan</string>
    <string name="pro_yunnan">Yunnan</string>
    <string name="pro_hunan">Hunan</string>
    <string name="pro_anhui">Anhui</string>
    <string name="pro_shandong">Shandong</string>
    <string name="pro_xinjiang">Xinjiang</string>
    <string name="pro_jiangsu">Jiangsu</string>
    <string name="pro_zhejiang">Zhejiang</string>
    <string name="pro_jiangxi">Jiangxi</string>
    <string name="pro_hubei">Hubei</string>
    <string name="pro_guangxi">Guangxi</string>
    <string name="pro_gansu">Gansu</string>
    <string name="pro_shanxi">Shanxi</string>
    <string name="pro_neimenggu">Neimenggu</string>
    <string name="pro_Shuanxi">Shuanxi</string>
    <string name="pro_fujian">Fujian</string>
    <string name="pro_guizhou">Guizhou</string>
    <string name="pro_guangdong">Guangdong</string>
    <string name="pro_qinghai">Qinghai</string>
    <string name="pro_xizang">Tibet</string>
    <string name="pro_sichuan">Sichuan</string>
    <string name="pro_ningxia">Ningxia</string>
    <string name="pro_taiwan">Taiwan</string>
    <string name="pro_xianggang">Hong Kong</string>
    <string name="pro_aomen">Macao</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ask_to_dialect">Help by Voice</string>
</resources>
